fixed overlapping div

--- a/static/sass/screen.sass
+++ b/static/sass/screen.sass
@@ -66,7 +66,7 @@ a:hover
 
   #content
     position: absolute
-    left: 400px
+    left: 500px
     top: 36px
     right: 0
     height: 100%
